Fix unstable-ordered set exception